docs: update README to reflect new premium features, enhanced server capabilities, and improved installation guidelines